<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>ros2aria_msgs</name>
	<version>0.1.0</version>
	<description>Definitions of robots information and restriction messages</description>
	<maintainer email="l15@kcir.pwr.edu.pl">
		Autonomous Robot Lab L1.5 on WUST Department of Cybernetics and Robotics
	</maintainer>

	<author email="aleksander.bojda@pwr.edu.pl">Aleksander Bojda</author>
	<author email="me@irth.pl">Wojciech Kwolek</author>
	<author email="delicat.kuba@gmail.com">Jakub Delicat</author>

	<license>MIT</license>

	<buildtool_depend>ament_cmake</buildtool_depend>

	<test_depend>ament_lint_auto</test_depend>
	<test_depend>ament_lint_common</test_depend>

	<build_depend>rosidl_default_generators</build_depend>

	<exec_depend>rosidl_default_runtime</exec_depend>

	<member_of_group>rosidl_interface_packages</member_of_group>

	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>
